Added Uncle and Grand parent

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,26 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
+    "from typing import ClassVar, Any\n",
+    "\n",
     "\n",
     "@dataclass\n",
     "class Node:\n",
-    "    key:any\n",
+    "    key: Any\n",
+    "    color: bool\n",
     "    parent: object\n",
-    "    color: bool\n"
+    "    left: object\n",
+    "    right: object\n",
+    "\n",
+    "    def grand_parent(self):\n",
+    "        if(self.parent != None):\n",
+    "            return self.parent.parent\n",
+    "        else:\n",
+    "            return None\n",
+    "    \n",
+    "    def uncle(self):\n",
+    "        gp = self.grand_parent()\n",
+    "        if gp is None:\n",
+    "            return None\n",
+    "        if self.parent == gp.left:\n",
+    "            return gp.right\n",
+    "        else:\n",
+    "            return gp.left\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "node = Node(1, None, True)"
+    "right_l = Node(4, False, None, None, None)\n",
+    "right_r = Node(5, False, None, None, None)\n",
+    "root = Node(1, False, None, None, None)\n",
+    "right = Node(2, False, root, right_l, right_r)\n",
+    "left = Node(3, False, root, None, None)\n",
+    "root.left = left\n",
+    "root.right = right\n",
+    "right_r.parent = right\n",
+    "right_l.parent = left\n",
+    "\n",
+    "print(right_l.uncle().key)\n"
    ]
   }
  ],
