--- a/main.ipynb
+++ b/main.ipynb
@@ -2,24 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
-    "from typing import ClassVar, Any\n",
+    "from typing import  Any\n",
+    "from enum import Enum\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
+    "class Color(Enum):\n",
+    "    RED = True\n",
+    "    BLACK = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "@dataclass\n",
     "class Node:\n",
     "    key: Any\n",
-    "    color: bool\n",
+    "    val: Any\n",
+    "    color: Color\n",
     "    parent: object\n",
     "    left: object\n",
     "    right: object\n",
     "\n",
     "    def grand_parent(self):\n",
-    "        if(self.parent != None):\n",
+    "        if self.parent is not None:\n",
     "            return self.parent.parent\n",
     "        else:\n",
     "            return None\n",
@@ -38,29 +59,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "right_l = Node(4, False, None, None, None)\n",
-    "right_r = Node(5, False, None, None, None)\n",
-    "root = Node(1, False, None, None, None)\n",
-    "right = Node(2, False, root, right_l, right_r)\n",
-    "left = Node(3, False, root, None, None)\n",
+    "class rb_tree:\n",
+    "    root: object\n",
+    "    \n",
+    "    # Temporary constructor\n",
+    "    def __init__(self, root) -> None:\n",
+    "        self.root = root\n",
+    "\n",
+    "    def insert(self, key, val):\n",
+    "        # Create a red node with two black leaves\n",
+    "        node = Node(key, val, Color.BLACK, None, None, None)\n",
+    "        node.left = Node(None, None, Color.BLACK, node, None, None)\n",
+    "        Node.right = Node(None, None, Color.BLACK, node, None, None)\n",
+    "        # Insert the node at a leaf position\n",
+    "        position_node = self.search_leaf(self.root, key)\n",
+    "        # Since we don't know if the node we got is the left or right child, we compare\n",
+    "        if position_node.parent.left == position_node:\n",
+    "            position_node.parent.left = node\n",
+    "        else:\n",
+    "            position_node.parent.right = node\n",
+    "        \n",
+    "\n",
+    "        # Balancing the tree after insert operation\n",
+    "        # Case 1\n",
+    "        if position_node.parent is None:\n",
+    "            position_node.color = Color.BLACK\n",
+    "            \n",
+    "        # Case 2\n",
+    "        elif position_node.parent.color == Color.BLACK:\n",
+    "            pass\n",
+    "        \n",
+    "    # Reccursive function to insert a node like a binary search tree\n",
+    "    def search_leaf(self, node, search_key) -> Node:\n",
+    "        # Since in rb trees we also insert None nodes after each node, we need to\n",
+    "        # check if key of the node is none\n",
+    "        if node.key is None or node.key == search_key:\n",
+    "            return node\n",
+    "\n",
+    "        if node.key < search_key:\n",
+    "            return self.search_leaf(node.right, search_key)\n",
+    "        \n",
+    "        return self.search_leaf(node.left, search_key)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Children of right node\n",
+    "right_l = Node(6, None, Color.BLACK, None, None, None)\n",
+    "right_l.left = Node(None, None, Color.BLACK, right_l, None, None)\n",
+    "right_l.right = Node(None, None, Color.BLACK, right_l, None, None)\n",
+    "\n",
+    "right_r = Node(8, None, Color.BLACK, None, None, None)\n",
+    "right_r.left = Node(None, None, Color.BLACK, right_r, None, None)\n",
+    "right_r.right = Node(None, None, Color.BLACK, right_r, None, None)\n",
+    "# Root Node\n",
+    "root = Node(5, None, Color.BLACK, None, None, None)\n",
+    "\n",
+    "right = Node(7, None, Color.BLACK, root, right_l, right_r)\n",
+    "left = Node(4, None, Color.BLACK, root, None, None)\n",
+    "# Children of root\n",
     "root.left = left\n",
     "root.right = right\n",
+    "\n",
     "right_r.parent = right\n",
     "right_l.parent = left\n",
     "\n",
-    "print(right_l.uncle().key)\n"
+    "left.left= Node(None, None, Color.BLACK, left, None, None)\n",
+    "left.right = Node(None, None, Color.BLACK, left, None, None)\n",
+    "\n",
+    "rb = rb_tree(root)\n",
+    "rb.insert(1, 2)\n",
+    "rb.insert(10,2)\n"
    ]
   }
  ],
