Updated the tree example and search_leaf function

--- a/main.ipynb
+++ b/main.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +77,7 @@
     "        Node.right = Node(None, None, Color.BLACK, node, None, None)\n",
     "        # Insert the node at a leaf position\n",
     "        position_node = self.search_leaf(self.root, key)\n",
+    "        print(position_node.parent.key)\n",
     "        # Since we don't know if the node we got is the left or right child, we compare\n",
     "        if position_node.parent.left == position_node:\n",
     "            position_node.parent.left = node\n",
@@ -97,7 +98,7 @@
     "    def search_leaf(self, node, search_key) -> Node:\n",
     "        # Since in rb trees we also insert None nodes after each node, we need to\n",
     "        # check if key of the node is none\n",
-    "        if node.key is None or node.key == search_key:\n",
+    "        if node.key is None:\n",
     "            return node\n",
     "\n",
     "        if node.key < search_key:\n",
@@ -108,23 +109,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
+    "# A valid Red-Black Tree\n",
     "# Children of right node\n",
-    "right_l = Node(6, None, Color.BLACK, None, None, None)\n",
+    "right_l = Node(3, None, Color.RED, None, None, None)\n",
     "right_l.left = Node(None, None, Color.BLACK, right_l, None, None)\n",
     "right_l.right = Node(None, None, Color.BLACK, right_l, None, None)\n",
     "\n",
-    "right_r = Node(8, None, Color.BLACK, None, None, None)\n",
+    "right_r = Node(5, None, Color.RED, None, None, None)\n",
     "right_r.left = Node(None, None, Color.BLACK, right_r, None, None)\n",
     "right_r.right = Node(None, None, Color.BLACK, right_r, None, None)\n",
     "# Root Node\n",
-    "root = Node(5, None, Color.BLACK, None, None, None)\n",
+    "root = Node(2, None, Color.BLACK, None, None, None)\n",
     "\n",
-    "right = Node(7, None, Color.BLACK, root, right_l, right_r)\n",
-    "left = Node(4, None, Color.BLACK, root, None, None)\n",
+    "right = Node(4, None, Color.BLACK, root, right_l, right_r)\n",
+    "left = Node(1, None, Color.BLACK, root, None, None)\n",
     "# Children of root\n",
     "root.left = left\n",
     "root.right = right\n",
