Updated Insert to account for empty tree

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "@dataclass\n",
     "class Node:\n",
     "    key: Any\n",
@@ -44,7 +43,7 @@
     "            return self.parent.parent\n",
     "        else:\n",
     "            return None\n",
-    "    \n",
+    "\n",
     "    def uncle(self):\n",
     "        gp = self.grand_parent()\n",
     "        if gp is None:\n",
@@ -52,48 +51,51 @@
     "        if self.parent == gp.left:\n",
     "            return gp.right\n",
     "        else:\n",
-    "            return gp.left\n",
-    "\n",
-    "\n"
+    "            return gp.left"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "class rb_tree:\n",
     "    root: object\n",
-    "    \n",
+    "\n",
     "    # Temporary constructor\n",
     "    def __init__(self, root) -> None:\n",
     "        self.root = root\n",
     "\n",
+    "    def __init__(self) -> None:\n",
+    "        self.root = None\n",
+    "\n",
     "    def insert(self, key, val):\n",
     "        # Create a red node with two black leaves\n",
-    "        node = Node(key, val, Color.BLACK, None, None, None)\n",
+    "        node = Node(key, val, Color.RED, None, None, None)\n",
     "        node.left = Node(None, None, Color.BLACK, node, None, None)\n",
-    "        Node.right = Node(None, None, Color.BLACK, node, None, None)\n",
+    "        node.right = Node(None, None, Color.BLACK, node, None, None)\n",
     "        # Insert the node at a leaf position\n",
-    "        position_node = self.search_leaf(self.root, key)\n",
-    "        print(position_node.parent.key)\n",
-    "        # Since we don't know if the node we got is the left or right child, we compare\n",
-    "        if position_node.parent.left == position_node:\n",
-    "            position_node.parent.left = node\n",
+    "        if self.root is None:\n",
+    "            position_node = node\n",
+    "            self.root = position_node\n",
     "        else:\n",
-    "            position_node.parent.right = node\n",
-    "        \n",
+    "            position_node = self.search_leaf(self.root, key)\n",
+    "            # Since we don't know if the node we got is the left or right child, we compare\n",
+    "            if position_node.parent.left is position_node:\n",
+    "                position_node.parent.left = node\n",
+    "            else:\n",
+    "                position_node.parent.right = node\n",
     "\n",
     "        # Balancing the tree after insert operation\n",
     "        # Case 1\n",
     "        if position_node.parent is None:\n",
     "            position_node.color = Color.BLACK\n",
-    "            \n",
+    "\n",
     "        # Case 2\n",
     "        elif position_node.parent.color == Color.BLACK:\n",
     "            pass\n",
-    "        \n",
+    "\n",
     "    # Reccursive function to insert a node like a binary search tree\n",
     "    def search_leaf(self, node, search_key) -> Node:\n",
     "        # Since in rb trees we also insert None nodes after each node, we need to\n",
@@ -103,27 +105,28 @@
     "\n",
     "        if node.key < search_key:\n",
     "            return self.search_leaf(node.right, search_key)\n",
-    "        \n",
-    "        return self.search_leaf(node.left, search_key)\n"
+    "\n",
+    "        return self.search_leaf(node.left, search_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "5\n"
+      "Node(key=1, val=2, color=<Color.BLACK: False>, parent=None, left=Node(key=None, val=None, color=<Color.BLACK: False>, parent=..., left=None, right=None), right=Node(key=10, val=2, color=<Color.RED: True>, parent=None, left=Node(key=None, val=None, color=<Color.BLACK: False>, parent=..., left=None, right=None), right=Node(key=None, val=None, color=<Color.BLACK: False>, parent=..., left=None, right=None)))\n"
      ]
     }
    ],
    "source": [
     "# A valid Red-Black Tree\n",
     "# Children of right node\n",
+    "\n",
+    "# Node(key, val, color, parent, left, right)\n",
     "right_l = Node(3, None, Color.RED, None, None, None)\n",
     "right_l.left = Node(None, None, Color.BLACK, right_l, None, None)\n",
     "right_l.right = Node(None, None, Color.BLACK, right_l, None, None)\n",
@@ -146,9 +149,10 @@
     "left.left= Node(None, None, Color.BLACK, left, None, None)\n",
     "left.right = Node(None, None, Color.BLACK, left, None, None)\n",
     "\n",
-    "rb = rb_tree(root)\n",
-    "rb.insert(1, 2)\n",
-    "rb.insert(10,2)\n"
+    "rb = rb_tree()\n",
+    "# rb.insert(1, 2)\n",
+    "# rb.insert(10,2)\n",
+    "print(rb.root)\n"
    ]
   }
  ],
