Added Left Rotate and a temp str for Node object

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,9 @@
     "    left: object\n",
     "    right: object\n",
     "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f'\\t\\tKey: {self.key}; Val: {self.val}; Parent:{self.parent.key if self.parent is not None else self.parent}\\n Left:{self.left.key}\\t\\t\\t Right:{self.right.key}'\n",
+    "\n",
     "    def grand_parent(self):\n",
     "        if self.parent is not None:\n",
     "            return self.parent.parent\n",
@@ -48,15 +51,23 @@
     "        gp = self.grand_parent()\n",
     "        if gp is None:\n",
     "            return None\n",
-    "        if self.parent == gp.left:\n",
+    "        if self.parent is gp.left:\n",
     "            return gp.right\n",
     "        else:\n",
-    "            return gp.left"
+    "            return gp.left\n",
+    "        \n",
+    "    def sibling(self):\n",
+    "        if self.parent is None:\n",
+    "            return None\n",
+    "        if self is self.parent.left:\n",
+    "            return self.parent.right\n",
+    "        else:\n",
+    "            return self.parent.left"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,11 +75,28 @@
     "    root: object\n",
     "\n",
     "    # Temporary constructor\n",
-    "    def __init__(self, root) -> None:\n",
+    "    def __init__(self, root=None) -> None:\n",
     "        self.root = root\n",
     "\n",
-    "    def __init__(self) -> None:\n",
-    "        self.root = None\n",
+    "    def rotate_left(self, node):\n",
+    "        # We are given the parent of the new node\n",
+    "        gp = node.parent\n",
+    "        # We change the  child of grand parent to the new node\n",
+    "        if node is gp.left:\n",
+    "            gp.left = node.right\n",
+    "            gp.left.parent = gp\n",
+    "        else:\n",
+    "            gp.right = node.right\n",
+    "            gp.right.parent = gp\n",
+    "\n",
+    "        # We will change the value of the right child of the parent to the left child of the new node\n",
+    "        temp_right_node = node.right\n",
+    "        node.right = node.right.left\n",
+    "        node.right.parent = node\n",
+    "\n",
+    "        temp_right_node.left = node\n",
+    "        node.parent = temp_right_node\n",
+    "\n",
     "\n",
     "    def insert(self, key, val):\n",
     "        # Create a red node with two black leaves\n",
@@ -111,14 +139,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node(key=1, val=2, color=<Color.BLACK: False>, parent=None, left=Node(key=None, val=None, color=<Color.BLACK: False>, parent=..., left=None, right=None), right=Node(key=10, val=2, color=<Color.RED: True>, parent=None, left=Node(key=None, val=None, color=<Color.BLACK: False>, parent=..., left=None, right=None), right=Node(key=None, val=None, color=<Color.BLACK: False>, parent=..., left=None, right=None)))\n"
+      "Before Rotation\n",
+      "Root\n",
+      "\t\tKey: 2; Val: None; Parent:None\n",
+      " Left:1\t\t\t Right:4\n",
+      "Root.right\n",
+      "\t\tKey: 4; Val: None; Parent:2\n",
+      " Left:3\t\t\t Right:5\n",
+      "Root.right.right\n",
+      "\t\tKey: 5; Val: None; Parent:4\n",
+      " Left:None\t\t\t Right:None\n",
+      "\n",
+      "\n",
+      "After Rotation\n",
+      "Root\n",
+      "\t\tKey: 2; Val: None; Parent:None\n",
+      " Left:1\t\t\t Right:5\n",
+      "Root.right\n",
+      "\t\tKey: 5; Val: None; Parent:2\n",
+      " Left:4\t\t\t Right:None\n",
+      "Root.right.left\n",
+      "\t\tKey: 4; Val: None; Parent:5\n",
+      " Left:3\t\t\t Right:None\n"
      ]
     }
    ],
@@ -144,15 +193,56 @@
     "root.right = right\n",
     "\n",
     "right_r.parent = right\n",
-    "right_l.parent = left\n",
+    "right_l.parent = right\n",
     "\n",
     "left.left= Node(None, None, Color.BLACK, left, None, None)\n",
     "left.right = Node(None, None, Color.BLACK, left, None, None)\n",
     "\n",
+    "# Pre constructed tree example\n",
+    "rb = rb_tree(root)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(\"Before Rotation\")\n",
+    "print(\"Root\")\n",
+    "print(str(root))\n",
+    "print(\"Root.right\")\n",
+    "print(str(root.right))\n",
+    "print(\"Root.right.right\")\n",
+    "print(str(root.right.right))\n",
+    "\n",
+    "print('\\n\\nAfter Rotation')\n",
+    "rb.rotate_left(right)\n",
+    "print(\"Root\")\n",
+    "print(str(root))\n",
+    "print(\"Root.right\")\n",
+    "print(str(root.right))\n",
+    "print(\"Root.right.left\")\n",
+    "print(str(root.right.left))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t\tKey: 1; Val: 2; Parent:None\n",
+      " Left:None\t\t\t Right:10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Empty Tree example\n",
+    "\n",
     "rb = rb_tree()\n",
-    "# rb.insert(1, 2)\n",
-    "# rb.insert(10,2)\n",
-    "print(rb.root)\n"
+    "rb.insert(1, 2)\n",
+    "rb.insert(10,2)\n",
+    "print(rb.root)"
    ]
   }
  ],
