Rotate Left and Right

--- a/main.ipynb
+++ b/main.ipynb
@@ -78,25 +78,55 @@
     "    def __init__(self, root=None) -> None:\n",
     "        self.root = root\n",
     "\n",
+    "    # def rotate_left(self, node):\n",
+    "    #     # We are given the parent of the new node\n",
+    "    #     gp = node.parent\n",
+    "    #     # We change the  child of grand parent to the new node\n",
+    "    #     if node is gp.left:\n",
+    "    #         gp.left = node.right\n",
+    "    #         gp.left.parent = gp\n",
+    "    #     else:\n",
+    "    #         gp.right = node.right\n",
+    "    #         gp.right.parent = gp\n",
+    "    #\n",
+    "    #     # We will change the value of the right child of the parent to the left child of the new node\n",
+    "    #     temp_right_node = node.right\n",
+    "    #     node.right = node.right.left\n",
+    "    #     node.right.parent = node\n",
+    "    #\n",
+    "    #     temp_right_node.left = node\n",
+    "    #     node.parent = temp_right_node\n",
+    "\n",
     "    def rotate_left(self, node):\n",
-    "        # We are given the parent of the new node\n",
-    "        gp = node.parent\n",
-    "        # We change the  child of grand parent to the new node\n",
-    "        if node is gp.left:\n",
-    "            gp.left = node.right\n",
-    "            gp.left.parent = gp\n",
-    "        else:\n",
-    "            gp.right = node.right\n",
-    "            gp.right.parent = gp\n",
+    "        R_child = node.right\n",
+    "        node.right = R_child.left\n",
+    "        if R_child.left != None :\n",
+    "            R_child.left.parent = node\n",
     "\n",
-    "        # We will change the value of the right child of the parent to the left child of the new node\n",
-    "        temp_right_node = node.right\n",
-    "        node.right = node.right.left\n",
-    "        node.right.parent = node\n",
+    "        R_child.parent = node.parent\n",
+    "        if node.parent == None :\n",
+    "            self.root = R_child\n",
+    "        elif node == node.parent.left :\n",
+    "            node.parent.left = R_child\n",
+    "        else :\n",
+    "            node.parent.right = R_child\n",
+    "        R_child.left = node\n",
+    "        node.parent = R_child\n",
     "\n",
-    "        temp_right_node.left = node\n",
-    "        node.parent = temp_right_node\n",
-    "\n",
+    "    def rotate_right(self, node):\n",
+    "        L_child = node.left\n",
+    "        node.left = L_child.right\n",
+    "        if L_child.right != None :\n",
+    "            L_child.right.parent = node\n",
+    "        L_child.parent = node.parent\n",
+    "        if node.parent == None :\n",
+    "            self.root = L_child\n",
+    "        elif node == node.parent.right :\n",
+    "            node.parent.right = L_child\n",
+    "        else :\n",
+    "            node.parent.left = L_child\n",
+    "        L_child.right = node\n",
+    "        node.parent = L_child\n",
     "\n",
     "    def insert(self, key, val):\n",
     "        # Create a red node with two black leaves\n",
@@ -115,14 +145,22 @@
     "            else:\n",
     "                position_node.parent.right = node\n",
     "\n",
-    "        # Balancing the tree after insert operation\n",
-    "        # Case 1\n",
-    "        if position_node.parent is None:\n",
-    "            position_node.color = Color.BLACK\n",
+    "        if node.parent == None :\n",
+    "            node.color = Color.BLACK\n",
+    "            return\n",
     "\n",
-    "        # Case 2\n",
-    "        elif position_node.parent.color == Color.BLACK:\n",
-    "            pass\n",
+    "        if node.grand_parent() == None :\n",
+    "            return\n",
+    "\n",
+    "        self.fix(node)\n",
+    "        # # Balancing the tree after insert operation\n",
+    "        # # Case 1\n",
+    "        # if position_node.parent is None:\n",
+    "        #     position_node.color = Color.BLACK\n",
+    "        #\n",
+    "        # # Case 2\n",
+    "        # elif position_node.parent.color == Color.BLACK:\n",
+    "        #     pass\n",
     "\n",
     "    # Reccursive function to insert a node like a binary search tree\n",
     "    def search_leaf(self, node, search_key) -> Node:\n",
@@ -134,43 +172,19 @@
     "        if node.key < search_key:\n",
     "            return self.search_leaf(node.right, search_key)\n",
     "\n",
-    "        return self.search_leaf(node.left, search_key)"
+    "        return self.search_leaf(node.left, search_key)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before Rotation\n",
-      "Root\n",
-      "\t\tKey: 2; Val: None; Parent:None\n",
-      " Left:1\t\t\t Right:4\n",
-      "Root.right\n",
-      "\t\tKey: 4; Val: None; Parent:2\n",
-      " Left:3\t\t\t Right:5\n",
-      "Root.right.right\n",
-      "\t\tKey: 5; Val: None; Parent:4\n",
-      " Left:None\t\t\t Right:None\n",
-      "\n",
-      "\n",
-      "After Rotation\n",
-      "Root\n",
-      "\t\tKey: 2; Val: None; Parent:None\n",
-      " Left:1\t\t\t Right:5\n",
-      "Root.right\n",
-      "\t\tKey: 5; Val: None; Parent:2\n",
-      " Left:4\t\t\t Right:None\n",
-      "Root.right.left\n",
-      "\t\tKey: 4; Val: None; Parent:5\n",
-      " Left:3\t\t\t Right:None\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# A valid Red-Black Tree\n",
     "# Children of right node\n",
