--- a/main.ipynb
+++ b/main.ipynb
@@ -173,7 +173,41 @@
     "            return self.search_leaf(node.right, search_key)\n",
     "\n",
     "        return self.search_leaf(node.left, search_key)\n",
-    "    "
+    "\n",
+    "    def fix(self, node):\n",
+    "        while node.parent.color == Color.RED :\n",
+    "            if node.parent == node.grand_parent().right :\n",
+    "                uncle = node.uncle()\n",
+    "                if uncle.color == Color.RED :\n",
+    "                    uncle.color = Color.BLACK\n",
+    "                    node.parent.color = Color.BLACK\n",
+    "                    node.grand_parent().color = Color.RED\n",
+    "                    node = node.grand_parent()\n",
+    "                else :\n",
+    "                    if node == node.parent.left :\n",
+    "                        node = node.parent\n",
+    "                        self.rotate_right(node)\n",
+    "                        node.parent.color = Color.BLACK\n",
+    "                        node.grand_parent().color = Color.RED\n",
+    "                        self.rotate_left(node.grand_parent)\n",
+    "            else :\n",
+    "                uncle = node.uncle()\n",
+    "                if unlce.color == Color.RED :\n",
+    "                    uncle.color = Color.BLACK\n",
+    "                    node.parent.color = Color.BLACK\n",
+    "                    node.grand_parent().color = Color.RED\n",
+    "                    node = node.grand_parent()\n",
+    "                else :\n",
+    "                    if node == node.parent.right :\n",
+    "                        node = node.parent\n",
+    "                        self.rotate_left(node)\n",
+    "                    node.parent.color = Color.BLACK\n",
+    "                    node.grand_parent().color = Color.RED\n",
+    "                    self.rotate_right(node.grand_parent())\n",
+    "            if node == self.root :\n",
+    "                break\n",
+    "        self.root.color = Color.BLACK\n",
+    "                    \n"
    ]
   },
   {
